# tramway

./: Cargo.toml  Dockerfile  README.md  compose.yml  tramway-pull
.github/workflows/: docker.yml  publish-java.yml
adapters/tramway-claude/: Cargo.toml
adapters/tramway-claude/examples/: basic.rs
adapters/tramway-claude/src/: lib.rs
adapters/tramway-gemini/: Cargo.toml
adapters/tramway-gemini/examples/: basic.rs
adapters/tramway-gemini/src/: lib.rs
adapters/tramway-ollama/: Cargo.toml
adapters/tramway-ollama/examples/: basic.rs
adapters/tramway-ollama/src/: lib.rs  local_intelligence.rs
adapters/tramway-openai/: Cargo.toml
adapters/tramway-openai/examples/: basic.rs
adapters/tramway-openai/src/: lib.rs
clients/tramway-java/: build.gradle  pom.xml  settings.gradle
clients/tramway-java/src/examples/java/io/tramway/examples/: BasicExample.java
clients/tramway-java/src/main/java/io/tramway/: RequestSerializer.java  ResponseParser.java  Tramway.java  TramwayException.java  TramwayExtensions.java  TramwayTest.java
clients/tramway-py/: pyproject.toml
clients/tramway-py/tramway/: builder.py  client.py  exceptions.py
clients/tramway-py/tramway/examples/: __init__.py  basic.py
clients/tramway-rust/: Cargo.toml
clients/tramway-rust/src/: lib.rs
protocols/tramway-protocol-openai/: Cargo.toml
protocols/tramway-protocol-openai/src/: error.rs  lib.rs  model.rs  request.rs  response.rs
tramway-core/: Cargo.toml
tramway-core/src/: lib.rs  registry.rs
tramway-server/: Cargo.toml
tramway-server/src/: main.rs  ollama_detect.rs  openai.rs  registry.rs  state.rs
tramway-server/src/routes/: mod.rs  openai.rs
