[package]
name = "tramway-server"
version = "0.1.0"
edition = "2021"
description = "Axum HTTP server for the Tramway LLM gateway"

[[bin]]
name = "tramway-server"
path = "src/main.rs"

[dependencies]
tramway-core = { path = "../tramway-core" }
tramway-ollama = { path = "../adapters/tramway-ollama" }
tramway-claude = { path = "../adapters/tramway-claude" }
tramway-protocol-openai = { path = "../protocols/tramway-protocol-openai" }

axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
