[package]
name = "tramway-claude"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow = "1"
tramway-core = { path = "../../tramway-core" }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
