[package]
name = "tramway-ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tramway-core = { path = "../../tramway-core" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stream = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
