[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tramway"
version = "0.1.0"
description = "Python client for the Tramway LLM gateway"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/jonroebuck/tramway"

[tool.setuptools.packages.find]
where = ["."]
include = ["tramway*"]
