[package]
name = "tramway-rust"
version = "0.1.0"
edition = "2021"
description = "Rust client for Tramway"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
