[package]
name = "tramway-protocol-openai"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible protocol adapter for Tramway"

[dependencies]
tramway-core = { path = "../../tramway-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
